Table teams {
  id serial [pk, increment]
  project_id integer [ref: > projects.id] 
}

Table project_categories {
  id serial [pk, increment]
  slug varchar(50) [unique]
  name varchar(100)
  description text
  icon varchar(50)
}

Table technologies {
  id serial [pk, increment]
  name varchar(100) [unique]
  category varchar(50)
}

Table projects {
  id serial [pk, increment]
  title varchar(255) [not null]
  description text
  long_description text
  category_id integer [ref: > project_categories.id]
  complexity varchar(20) // 'low', 'medium', 'high'
  longevity varchar(20) // 'short-term', 'medium-term', 'long-term'
  duration varchar(50)
  team_size integer
  progress integer
  stars integer [default: 0]
  forks integer [default: 0]
  last_updated timestamp
  created_at timestamp [default: `now()`]
  repository_url varchar(500)
  demo_url varchar(500)
}

Table projects_to_technologies {
  project_id integer [ref: > projects.id]
  technology_id integer [ref: > technologies.id]
  primary boolean [default: false]
}

Table roles {
  id serial [pk, increment]
  name varchar(100) [unique]
  description text
  typical_skills text[]
  default_count integer [default: 1]
}

Table projects_to_roles {
  id serial [pk, increment]
  project_id integer [ref: > projects.id]
  role_id integer [ref: > roles.id]
  count integer
  specific_skills text[]
}

Table project_learning_outcomes {
  id serial [pk, increment]
  project_id integer [ref: > projects.id]
  outcome text
}


Table artifacts {
  id serial [pk, increment]
}

Table artifacts_to_projects {
  artifact_id integer [ref: > artifacts.id]
  project_id integer [ref: > projects.id]
  added_at timestamp [default: `now()`]
}